Fix sparkline height on IE11

--- a/assets/stylesheets/main/sparklines.css.scss
+++ b/assets/stylesheets/main/sparklines.css.scss
@@ -4,7 +4,7 @@
   svg {
     display: block;
     width: 3em;
-    height: 100%;
+    height: 1em;
     background: transparent;
   }
 
